# doctify

./: .editorconfig  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
.serena/: project.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  coverage.xml  fix_imports.py  pyproject.toml  pytest.ini  test_ocr_restoration.py  test_relationship.py
backend/alembic/: env.py
backend/alembic/versions/: 20260115_000000_001_initial_tables.py  20260121_000000_002_add_rag_tables.py  20260121_000000_003_add_chatbot_tables.py  20260122_000000_004_add_user_settings_table.py  20260122_000000_005_add_missing_tables.py  20260122_000000_006_add_updated_at_to_rag_queries.py  20260123_000000_007_fix_vector_index.py  20260126_000000_008_add_document_confirmation_fields.py  20260126_120000_009_add_knowledge_base_tables.py  20260127_000000_010_add_ai_assistants_tables.py  20260205_000000_011_add_hybrid_search.py  20260205_100000_012_add_rag_conversations.py  20260205_200000_013_add_groundedness_fields.py  20260205_300000_014_add_rag_evaluations.py  20260210_000000_015_add_insights_tables.py  20260210_100000_016_extend_rag_queries_analytics.py  20260217_000000_018_add_ai_model_settings.py  20260220_000000_017_add_query_feedback.py  20260223_000000_019_add_model_catalog.py  20260312_000000_020_add_updated_at_to_document_embeddings.py
backend/app/: main.py
backend/app/api/v1/: deps.py
backend/app/core/: audit_log.py  config.py  db_security.py  exceptions.py  password_policy.py  security.py
backend/app/db/: __init__.py  database.py  redis.py
backend/app/db/models/: __init__.py  ai_model_setting.py  api_key.py  assistant.py  assistant_conversation.py  base.py  document.py  edit_history.py  insights.py  knowledge_base.py  model_catalog.py  project.py  rag.py  template.py  user.py  user_settings.py
backend/app/db/repositories/: __init__.py  ai_model_settings_repository.py  assistant_conversation_repository.py  assistant_repository.py  base.py  chat_repository.py  document.py  insights.py  knowledge_base.py  model_catalog_repository.py  project.py  rag.py  user.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: assistant.py  assistant_conversation.py  chat.py  document.py  project.py  user.py
backend/app/domain/value_objects/: confidence_score.py  file_metadata.py  token_usage.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: ai_model_settings.py  assistant.py  chat.py  common.py  dashboard.py  document.py  edit_history.py  insights.py  ocr.py  project.py  settings.py  template.py  user.py
backend/app/schemas/: data_source.py  knowledge_base.py  rag.py
backend/app/services/: base.py
backend/app/services/ai/: __init__.py  gateway.py  model_settings_service.py
backend/app/services/analytics/: __init__.py  dashboard_service.py
backend/app/services/assistant/: __init__.py  assistant_service.py  public_chat_service.py
backend/app/services/auth/: __init__.py  api_key.py  authentication.py  token_blacklist.py
backend/app/services/chat/: chat_service.py  intent_classifier.py  tool_router.py
backend/app/services/document/: export.py  processing.py  upload.py
backend/app/services/edit_history/: __init__.py  edit_history_service.py
backend/app/services/insights/: __init__.py  dataset_service.py  query_service.py
backend/app/services/notification/: __init__.py  redis_events.py  websocket.py
backend/app/services/ocr/: l25_orchestrator.py  orchestrator.py  prompt_templates.py  retry_strategy.py  validation_layer.py
backend/app/services/rag/: __init__.py  cache_service.py  embedding_service.py  evaluation_service.py  generation_service.py  groundedness_service.py  intent_classifier.py  pipeline_router.py  reranker_service.py  retrieval_service.py  security.py
backend/app/services/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/app/services/template/: __init__.py  template_service.py
backend/app/services/user/: __init__.py  settings_service.py
backend/app/tasks/: __init__.py  celery_app.py  knowledge_base.py
backend/app/tasks/document/: __init__.py  export.py  ocr.py
backend/app/tasks/rag/: __init__.py  embedding_task.py  evaluation_task.py
backend/app/utils/: __init__.py  ocr_logger.py  sanitizer.py  schema_validator.py  simple_ocr_logger.py
backend/docs/: OCR_LOGGING_GUIDE.md
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: check_rag_status.py  create_test_data.py  test_api_keys.py  verify_rag_implementation.py  view_ocr_logs.py
backend/tests/: conftest.py
backend/tests/e2e/: test_chat_workflow.py  test_document_workflow.py  test_rag_workflow.py
backend/tests/fixtures/: __init__.py  api_keys.py  assistants.py  documents.py  files.py  mocks.py  projects.py  test_document.txt  test_upload_document.txt  users.py
backend/tests/integration/test_api/: test_assistants.py  test_auth_endpoints.py  test_chat.py  test_chat_api.py  test_documents_endpoints.py  test_projects_endpoints.py  test_public_chat.py  test_rag.py  test_unified_knowledge.py  test_websocket.py
backend/tests/integration/test_rag/: test_rag_edge_cases.py  test_rag_final.py  test_rag_with_threshold.py
backend/tests/unit/test_repositories/: __init__.py  test_base_repository.py  test_document_repository.py  test_user_repository.py
backend/tests/unit/test_services/: __init__.py  test_document_upload.py  test_ocr_service.py  test_storage_service.py
backend/tests/unit/test_utils/: __init__.py
(+559 files in other folders)
